--- a/setup.cfg
+++ b/setup.cfg
@@ -13,8 +13,8 @@ include_trailing_comma = true
 line_length = 79
 
 [coverage:run]
-source = ./LocalFolioPOC
-omit = *migrations*, *tests*
+source = ./finance
+omit = *migrations*, *tests*, *management*
 branch = 1
 
 [coverage:report]
